feat: support tsf 2024 (#1635)